--- a/generic.html
+++ b/generic.html
@@ -48,14 +48,12 @@
 								<h2><a id="abstract collection">Abstract Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
-										<div class="col-3"><span class="image fit"><img src="images/a7.jpeg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a8.JPG" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a9.jpeg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a14.JPG" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Kaleidoscope</i></b><br />Acrylic, 8' x 10'<br />$20</p></div>
-										<div class="col-3"><p><b><i>Intricate</i></b><br />Acrylic and Resin, 8' x 10'<br />$40</p></div>
-										<div class="col-3"><p><b><i>Happy</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
-										<div class="col-3"><p><b><i>Opposites</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
+										<div class="col-4"><span class="image fit"><img src="images/a7.jpeg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a9.jpeg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a14.JPG" alt="" /></span></div>
+										<div class="col-4"><p><b><i>Kaleidoscope</i></b><br />Acrylic, 8' x 10'<br />$20</p></div>
+										<div class="col-4"><p><b><i>Happy</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
+										<div class="col-4"><p><b><i>Opposites</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
 
 										<div class="col-5"><span class="image fit"><img src="images/a12.JPG" alt="" /></span></div>
 										<div class="col-5"><span class="image fit"><img src="images/a15.jpg" alt="" /></span></div>
@@ -69,23 +67,28 @@
 										<div class="col-4"><p><b><i>Nature's Wonder</i></b><br />Acrylic, 3' x 3'<br />$380</p></div>
 										<div class="col-4"><p><b><i>Still Light</i></b><br />Acrylic, 20" x 20"<br />$60</p></div>
 
-										<div class="col-3"><span class="image fit"><img src="images/a1.jpg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a3.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a19.jpg" alt="" /></span></div>
+										<div class="col-3"><span class="image fit"><img src="images/a20.jpg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a11.JPG" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a4.jpg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Rain</i></b><br />Acrylic, 24" x 24"<br />$120 SOLD</p></div>
-										<div class="col-3"><p><b><i>Bravo</i></b><br />Acrylic, 15" x 12"<br />$50 SOLD</p></div>
+										<div class="col-3"><p><b><i>Vivid</i></b><br />Alcohol Inks, 30" x 24"<br />$90</p></div>
+										<div class="col-3"><p><b><i>NAME</i></b><br />Acrylic, " x "<br />$</p></div>
 										<div class="col-3"><p><b><i>Ocean Life</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
 										<div class="col-3"><p><b><i>Exuberant</i></b><br />Acrylic and Resin, 9.5" x 8"<br />$50 SOLD</p></div>
 
-										<div class="col-3"><span class="image fit"><img src="images/a17.jpg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a19.jpg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a18.jpg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/a16.jpg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Growth</i></b><br />Acrylic, 12" x 12"<br />$40</p></div>
-										<div class="col-3"><p><b><i>Vivid</i></b><br />Alcohol Inks, 30" x 24"<br />$90</p></div>
-										<div class="col-3"><p><b><i>Night Garden</i></b><br />Acrylic, " x "<br />$40</p></div>
-										<div class="col-3"><p><b><i>Release</i></b><br />Acrylic, 20" x 16"<br />$60</p></div>
+										<div class="col-4"><span class="image fit"><img src="images/a16.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a1.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a8.JPG" alt="" /></span></div>
+										<div class="col-4"><p><b><i>Release</i></b><br />Acrylic, 20" x 16"<br />$60</p></div>
+										<div class="col-4"><p><b><i>Rain</i></b><br />Acrylic, 24" x 24"<br />$120 SOLD</p></div>
+										<div class="col-4"><p><b><i>Intricate</i></b><br />Acrylic and Resin, 8' x 10'<br />$40</p></div>
+
+										<div class="col-4"><span class="image fit"><img src="images/a3.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a17.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/a18.jpg" alt="" /></span></div>
+										<div class="col-4"><p><b><i>Bravo</i></b><br />Acrylic, 15" x 12"<br />$50 SOLD</p></div>
+										<div class="col-4"><p><b><i>Growth</i></b><br />Acrylic, 12" x 12"<br />$40</p></div>
+										<div class="col-4"><p><b><i>Night Garden</i></b><br />Acrylic, "10 x "10<br />$40</p></div>
 										
 										<div class="col-5"><span class="image fit"><img src="images/a2.jpg" alt="" /></span></div>
 										<div class="col-5"><span class="image fit"><img src="images/a13.jpeg" alt="" /></span></div>
@@ -114,13 +117,13 @@
 										<div class="col-3"><span class="image fit"><img src="images/n16.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n17.jpeg" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n31.jpeg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Spring</i></b><br />Acrylic, 10' x 20'<br />$40</p></div>
+										<div class="col-3"><p><b><i>Spring</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 										<div class="col-3"><p><b><i>A Decorative Table</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 										<div class="col-3"><p><b><i>Fall Leaves</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
 										<div class="col-3"><p><b><i>Blossoms</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/n13.jpeg" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/n33.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n33.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n21.jpeg" alt="" /></span></div>
 										<div class="col-4"><p><b><i>Texture</i></b><br />Acrylic, 8" x 10"<br />$45</p></div>
 										<div class="col-4"><p><b><i>Prarie Sky</i></b><br />Acrylic, 31.5" x 24"<br />$140</p></div>
@@ -131,7 +134,7 @@
 										<div class="col-3"><span class="image fit"><img src="images/n28.JPG" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/n23.jpeg" alt="" /></span></div>
 										<div class="col-3"><p><b><i>Fading Flowers</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
-										<div class="col-3"><p><b><i>Name</i></b><br />Acrylic, 20" x 10"<br />$</p></div>
+										<div class="col-3"><p><b><i>Let's Play</i></b><br />Acrylic, 10" x 20"<br />$</p></div>
 										<div class="col-3"><p><b><i>Silvery Night</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 										<div class="col-3"><p><b><i>Winter's Here</i></b><br />Acrylic on Wood Panels, 8" x 10" (2 piece)<br />$50</p></div>
 
@@ -149,7 +152,7 @@
 										<div class="col-3"><p><b><i>Sleepy Town</i></b><br />Acrylic, 10' x 20'<br />$40 SOLD</p></div>
 										<div class="col-3"><p><b><i>Blustery Day</i></b><br />Acrylic, 22" x 12"<br />$120 SOLD</p></div>
 										<div class="col-3"><p><b><i>Spring has Sprung</i></b><br />Acrylic and Ink, 10" x 20"<br />$40 SOLD</p></div>
-										<div class="col-3"><p><b><i>Nature</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
+										<div class="col-3"><p><b><i>White Blossoms</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
 										
 										<div class="col-4"><span class="image fit"><img src="images/n11.jpeg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n30.JPG" alt="" /></span></div>
@@ -166,21 +169,19 @@
 										<div class="col-4"><p><b><i>Designer Trees</i></b><br />Acrylic Layers, 19.5" x 19.5"<br />$80</p></div>
 										<div class="col-4"><p><b><i>Overgrowth</i></b><br />Acrylic and Ink, 18" x 24"<br />$80</p></div>
 
-										<div class="col-3"><span class="image fit"><img src="images/n1.jpg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/n2.jpg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/n3.jpg" alt="" /></span></div>
-										<div class="col-3"><span class="image fit"><img src="images/n6.jpg" alt="" /></span></div>
-										<div class="col-3"><p><b><i>Sleepy Town</i></b><br />Acrylic, 10' x 20'<br />$40 SOLD</p></div>
-										<div class="col-3"><p><b><i>Blustery Day</i></b><br />Acrylic, 22" x 12"<br />$120 SOLD</p></div>
-										<div class="col-3"><p><b><i>Spring has Sprung</i></b><br />Acrylic and Ink, 10" x 20"<br />$40 SOLD</p></div>
-										<div class="col-3"><p><b><i>Nature</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
-
 										<div class="col-4"><span class="image fit"><img src="images/n5.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n7.jpg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/n8.png" alt="" /></span></div>
 										<div class="col-4"><p><b><i>Upstream</i></b><br />Acrylic, 10" x 10"<br />$20 SOLD</p></div>
 										<div class="col-4"><p><b><i>Look Up, Way Up</i></b><br />Acrylic, 12" x 12"<br />$50</p></div>
 										<div class="col-4"><p><b><i>Be Patient</i></b><br />Acrylic, 12" x 12"<br />$50 SOLD</p></div>
+
+										<div class="col-4"><span class="image fit"><img src="images/n35.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n34.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/n36.jpg" alt="" /></span></div>
+										<div class="col-4"><p><b><i>NAME</i></b><br />Acrylic, 10" x 10"<br />$20 SOLD</p></div>
+										<div class="col-4"><p><b><i>NAME</i></b><br />Acrylic, 10" x 10"<br />$20 SOLD</p></div>
+										<div class="col-4"><p><b><i>NAME</i></b><br />Acrylic, 10" x 10"<br />$20 SOLD</p></div>
 									</div>
 								</div>
 							</section>
