--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 									spending time on weekends painting murals. 
 									I grew up, life got busy and creativity was put on the back burner. 
 									A very sudden health scare stopped me abruptly in my tracks and the first place that I turned to was art. 
-									Art brought me peace and solace during a very challenging time, and for that, I am grateful. 
-									The medium I use is acrylics and I am mostly drawn to nature. Playing with colour, texture and shape,
+									Art brought me peace and solace during a very challenging time, and for that, I am grateful. <br /><br />
+									The medium I use is mostly acrylics and I am drawn to nature. Playing with colour, texture and shape,
 									using different tools to manipulate paint and allowing the paint to flow and come to life is what brings me joy. <br /><br />
 									My hope is to pass on my art to family, friends and beyond. 
 									I look forward to a future where I will continue my lifelong, creative journey."</blockquote>
