Edit and art added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<h2>Hello and Welcome!</h2>
 									<p>Thank you for checking out my site!</p>
 								</header>
-								<blockquote>"Art has always been a passion of mine. I can recall, as a very young child, 
+								<blockquote>"Art has always been a passion of mine. I can recall, as a young child, 
 									looking for objects around the house to sketch and during high school, 
 									spending time on weekends painting murals. 
 									I grew up, life got busy and creativity was put on the back burner. 
