--- a/generic.html
+++ b/generic.html
@@ -72,7 +72,7 @@
 										<div class="col-3"><span class="image fit"><img src="images/a11.JPG" alt="" /></span></div>
 										<div class="col-3"><span class="image fit"><img src="images/a4.jpg" alt="" /></span></div>
 										<div class="col-3"><p><b><i>Vivid</i></b><br />Alcohol Inks, 30" x 24"<br />$90</p></div>
-										<div class="col-3"><p><b><i>NAME</i></b><br />Acrylic, " x "<br />$</p></div>
+										<div class="col-3"><p><b><i>Deep Waters</i></b><br />Alcohol Inks, 12" x 22"<br />$50</p></div>
 										<div class="col-3"><p><b><i>Ocean Life</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
 										<div class="col-3"><p><b><i>Exuberant</i></b><br />Acrylic and Resin, 9.5" x 8"<br />$30 SOLD</p></div>
 
@@ -162,7 +162,7 @@
 										<div class="col-3"><span class="image fit"><img src="images/n26.jpeg" alt="" /></span></div>
 										<div class="col-3"><p><b><i>Contrast</i></b><br />Acrylic, 18" x 24"<br />$70</p></div>
 										<div class="col-3"><p><b><i>Open Sky</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
-										<div class="col-3"><p><b><i>NAME</i></b><br />Acrylic, 10" x 20"<br />$</p></div>
+										<div class="col-3"><p><b><i>Lush</i></b><br />Pastels, 6' x 8"<br />$20</p></div>
 										<div class="col-3"><p><b><i>Calm</i></b><br />Acrylic, 8" x 10"<br />$30</p></div>
 
 										
