--- a/generic.html
+++ b/generic.html
@@ -64,7 +64,7 @@
 										<div class="col-4"><span class="image fit"><img src="images/a6.jpeg" alt="" /></span></div>
 										<div class="col-4"><span class="image fit"><img src="images/a10.jpeg" alt="" /></span></div>
 										<div class="col-4"><p><b><i>Wonderful World</i></b><br />Acrylic, 8" x 8"<br />$30</p></div>
-										<div class="col-4"><p><b><i>Nature's Wonder</i></b><br />Acrylic, 3' x 3'<br />$380</p></div>
+										<div class="col-4"><p><b><i>Nature's Wonder</i></b><br />Acrylic, 3' x 3'<br />$250</p></div>
 										<div class="col-4"><p><b><i>Still Light</i></b><br />Acrylic, 20" x 20"<br />$60</p></div>
 
 										<div class="col-3"><span class="image fit"><img src="images/a19.jpg" alt="" /></span></div>
@@ -95,7 +95,7 @@
 										<div class="col-4"><span class="image fit"><img src="images/a21.jpg" alt="" /></span></div>
 										<div class="col-4"><p><b><i>Depth</i></b><br />Acrylic Layers, 40" x 20"<br />$150</p></div>
 										<div class="col-4"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
-										<div class="col-4"><p><b><i>Flow</i></b><br />Acrylic, 10" x 10"<br />$50 SOLD</p></div>
+										<div class="col-4"><p><b><i>Aerial View</i></b><br />Acrylic, 10" x 10"<br />$50 SOLD</p></div>
 									</div>
 								</div>
 								<hr />
