--- a/generic.html
+++ b/generic.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Deb Peterson Art</title>
+		<meta name="Description" content="Deb Peterson is a local Edmonton Artist. Her work is inspired by the beauty of nature and discovering new techniques. View her work and get in touch today.">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -97,7 +98,7 @@
 										
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a13.jpeg" alt="Depth | Acrylic Layers, 40&quot x 20&quot | $150" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a2.jpg" alt="Flowing Waters | Acrylic, 20&quot x 10&quot (3 piece) | $100 SOLD" /></span></div>
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a21.jpg" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a21.jpg" alt="Aerial View | Acrylic, 10&quot x 10&quot | $50 SOLD" /></span></div>
 										<div class="col-4"><p><b><i>Depth</i></b><br />Acrylic Layers, 40" x 20"<br />$150</p></div>
 										<div class="col-4"><p><b><i>Flowing Waters</i></b><br />Acrylic, 20" x 10" (3 piece)<br />$100 SOLD</p></div>
 										<div class="col-4"><p><b><i>Aerial View</i></b><br />Acrylic, 10" x 10"<br />$50 SOLD</p></div>
