--- a/elements.html
+++ b/elements.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Deb Peterson Art</title>
+		<meta name="Description" content="Deb Peterson is a local Edmonton Artist. Her work is inspired by the beauty of nature and discovering new techniques. View her work and get in touch today.">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
