--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 						<img src="images/Logo-real.png" height="400" alt="" />
 						<h1>dEb's Easel<br />
 						</h1>
-						<p>Local Edmonton Artist.</p>
+						<p>Deb Peterson is a local Edmonton Artist. 
+							Her work is inspired by the beauty of nature and discovering new techniques.
+							View her work and get in touch today.
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
