--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo"><img src="images/Logo-real.png" height="30" alt="" />
-							dEb's Easel</a>
+							Deb Peterson Art</a>
 					</header>
 
 				<!-- Nav -->
