Update bio in main page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 						<h1>dEb's Easel<br />
 						</h1>
 						<p>Deb Peterson is a local Edmonton Artist. 
-							Her work is inspired by the beauty of nature and discovering new techniques.
-							View her work and get in touch today.
+							Her work is inspired by the beauty of nature and discovering new techniques.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
