Show phone and text

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
 							</section>
 							<section>
 								<h2>Phone</h2>
-								<p><a href="#">(780)-499-5452 (text)</a></p>
+								<h4><a href="#">(780)-499-5452 (text)</a></h4>
 							</section>
 							<section>
 								<h2>Email</h2>
-								<p><a href="#">dlpete.art4@gmail.com</a></p>
+								<h4><a href="#">dlpete.art4@gmail.com</a></h4>
 							</section>
 							<section>
 								
