--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">About Me</a></li>
-							<li><a href="generic.html">Gallery</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li class="active"><a href="contact.html">Contact Me</a></li>
 						</ul>
 						<ul class="icons">
