--- a/gallery.html
+++ b/gallery.html
@@ -177,7 +177,7 @@
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n11.jpeg" alt="Contrast | Acrylic, 18&quot x 24&quot | $70" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n30.JPG" alt="Open Sky | Acrylic, 10&quot x 20&quot | $40 SOLD" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n37.jpg" alt="Lush | Pastels, 6' x 8&quot | $20" /></span></div>
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n26.jpeg" alt="Calm | Acrylic, 8&quot x 10&quot | $30" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n26.jpeg" alt="Calm | Acrylic, 8&quot x 10&quot | $30 SOLD" /></span></div>
 										<div class="col-3"><p><b><i>Contrast</i></b><br />Acrylic, 18" x 24"<br />$70</p></div>
 										<div class="col-3"><p><b><i>Open Sky</i></b><br />Acrylic, 10" x 20"<br />$40 SOLD</p></div>
 										<div class="col-3"><p><b><i>Lush</i></b><br />Pastels, 6' x 8"<br />$20</p></div>
