--- a/gallery.html
+++ b/gallery.html
@@ -181,7 +181,7 @@
 										<div class="col-3"><p><b><i>Contrast</i></b><br />Acrylic, 18" x 24"<br />$70</p></div>
 										<div class="col-3"><p><b><i>Open Sky</i></b><br />Acrylic, 10" x 20"<br />$40 SOLD</p></div>
 										<div class="col-3"><p><b><i>Lush</i></b><br />Pastels, 6' x 8"<br />$20</p></div>
-										<div class="col-3"><p><b><i>Calm</i></b><br />Acrylic, 8" x 10"<br />$30</p></div>
+										<div class="col-3"><p><b><i>Calm</i></b><br />Acrylic, 8" x 10"<br />$30 SOLD</p></div>
 
 										
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n18.jpeg" alt="Uphill | Acrylic, 15.5&quot x 12&quot | $60" /></span></div>
