--- a/gallery.html
+++ b/gallery.html
@@ -119,10 +119,10 @@
 										<div class="col-5"><p><b><i>Summer Sky</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n10.JPG" alt="Spot of Light | Acrylic, 20&quot x 20&quot | $70" /></span></div>
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n20.jpeg" alt="Field of Poppies | Acrylic, 12&quot x 12&quot | $45" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n20.jpeg" alt="Field of Poppies | Acrylic, 12&quot x 12&quot | $45 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n19.JPG" alt="The Other Side | Acrylic, 12&quot x 12&quot | $40" /></span></div>
 										<div class="col-4"><p><b><i>Spot of Light</i></b><br />Acrylic, 20" x 20"<br />$70</p></div>
-										<div class="col-4"><p><b><i>Field of Poppies</i></b><br />Acrylic, 12" x 12"<br />$45</p></div>
+										<div class="col-4"><p><b><i>Field of Poppies</i></b><br />Acrylic, 12" x 12"<br />$45 SOLD</p></div>
 										<div class="col-4"><p><b><i>The Other Side</i></b><br />Acrylic, 12" x 12"<br />$40</p></div>
 
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n14.jpeg" alt="Spring | Acrylic, 10&quot x 20&quot | $40 SOLD" /></span></div>
