--- a/gallery.html
+++ b/gallery.html
@@ -153,9 +153,9 @@
 										<div class="col-3"><p><b><i>Silvery Night</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 										<div class="col-3"><p><b><i>Winter's Here</i></b><br />Acrylic on Wood Panels, 8" x 10" (2 piece)<br />$50 SOLD</p></div>
 
-										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n29.JPG" alt="On It's Way | Acrylic, 16&quot x 10&quot | $45" /></span></div>
+										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n29.JPG" alt="On It's Way | Acrylic, 16&quot x 10&quot | $45 SOLD" /></span></div>
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n39.jpeg" alt="Golden | Acrylic, 10' x 20&quot | $40" /></span></div>
-										<div class="col-5"><p><b><i>On It's Way</i></b><br />Acrylic, 16" x 10"<br />$45</p></div>
+										<div class="col-5"><p><b><i>On It's Way</i></b><br />Acrylic, 16" x 10"<br />$45 SOLD</p></div>
 										<div class="col-5"><p><b><i>Golden</i></b><br />Acrylic, 10' x 20"<br />$40</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n15.jpeg" alt="Winter Wonder | Acrylic Layers, 20&quot x 20&quot | $90" /></span></div>
