--- a/gallery.html
+++ b/gallery.html
@@ -187,11 +187,11 @@
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n18.jpeg" alt="Uphill | Acrylic, 15.5&quot x 12&quot | $60" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n24.jpeg" alt="Overgrowth | Acrylic and Ink, 18&quot x 24&quot | $80" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n35.jpg" alt="Frostbite | Acrylic, 20&quot x 16&quot | $50" /></span></div>
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n36.jpg" alt="Dusk | Acrylic, 24&quot x 18&quot | $60" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n36.jpg" alt="Dusk | Acrylic, 24&quot x 18&quot | $60 SOLD" /></span></div>
 										<div class="col-3"><p><b><i>Uphill</i></b><br />Acrylic, 15.5" x 12"<br />$60</p></div>
 										<div class="col-3"><p><b><i>Overgrowth</i></b><br />Acrylic and Ink, 18" x 24"<br />$80</p></div>
 										<div class="col-3"><p><b><i>Frostbite</i></b><br />Acrylic, 20" x 16"<br />$50</p></div>
-										<div class="col-3"><p><b><i>Dusk</i></b><br />Acrylic, 24" x 18"<br />$60</p></div>
+										<div class="col-3"><p><b><i>Dusk</i></b><br />Acrylic, 24" x 18"<br />$60 SOLD</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n34.png" alt="Summer | Acrylic, 20&quot x 20&quot | $80" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n7.jpg" alt="Look Up, Way Up | Acrylic, 12&quot x 12&quot | $50" /></span></div>
