--- a/gallery.html
+++ b/gallery.html
@@ -194,10 +194,10 @@
 										<div class="col-3"><p><b><i>Dusk</i></b><br />Acrylic, 24" x 18"<br />$60 SOLD</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n34.png" alt="Summer | Acrylic, 20&quot x 20&quot | $80 SOLD" /></span></div>
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n7.jpg" alt="Look Up, Way Up | Acrylic, 12&quot x 12&quot | $50" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n7.jpg" alt="Look Up, Way Up | Acrylic, 12&quot x 12&quot | $50 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n8.png" alt="Be Patient | Acrylic, 12&quot x 12&quot | $50 SOLD" /></span></div>
 										<div class="col-4"><p><b><i>Summer</i></b><br />Acrylic, 20" x 20"<br />$80 SOLD</p></div>
-										<div class="col-4"><p><b><i>Look Up, Way Up</i></b><br />Acrylic, 12" x 12"<br />$50</p></div>
+										<div class="col-4"><p><b><i>Look Up, Way Up</i></b><br />Acrylic, 12" x 12"<br />$50 SOLD</p></div>
 										<div class="col-4"><p><b><i>Be Patient</i></b><br />Acrylic, 12" x 12"<br />$50 SOLD</p></div>
 									</div>
 								</div>
