--- a/gallery.html
+++ b/gallery.html
@@ -62,9 +62,9 @@
 										<div class="col-4"><p><b><i>Happy</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
 										<div class="col-4"><p><b><i>Opposites</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
 
-										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/a12.JPG" alt="Beyond | Acrylic, 8&quot x 10&quot (2 piece)| $40"/></span></div>
+										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/a12.JPG" alt="Beyond | Acrylic, 8&quot x 10&quot (2 piece)| $40 SOLD"/></span></div>
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/a15.jpg" alt="Rhythm | Acrylic, 40&quot x 16&quot | $140"/></span></div>
-										<div class="col-5"><p><b><i>Beyond</i></b><br />Acrylic, 8" x 10" (2 piece)<br />$40</p></div>
+										<div class="col-5"><p><b><i>Beyond</i></b><br />Acrylic, 8" x 10" (2 piece)<br />$40 SOLD</p></div>
 										<div class="col-5"><p><b><i>Rhythm</i></b><br />Acrylic, 40" x 16"<br />$140</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a5.jpg" alt="Wonderful World | Acrylic, 8&quot x 8&quot | $30" /></span></div>
