--- a/gallery.html
+++ b/gallery.html
@@ -97,10 +97,10 @@
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a3.jpg" alt="Bravo | Acrylic, 15&quot x 12&quot | $50 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a17.jpg" alt="Growth | Acrylic, 12&quot x 12&quot | $40 SOLD" /></span></div>
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a18.jpg" alt="Night Garden | Acrylic, 10&quot x 10&quot | $40" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a18.jpg" alt="Night Garden | Acrylic, 10&quot x 10&quot | $40 SOLD" /></span></div>
 										<div class="col-4"><p><b><i>Bravo</i></b><br />Acrylic, 15" x 12"<br />$50 SOLD</p></div>
 										<div class="col-4"><p><b><i>Growth</i></b><br />Acrylic, 12" x 12"<br />$40 SOLD</p></div>
-										<div class="col-4"><p><b><i>Night Garden</i></b><br />Acrylic, 10" x 10"<br />$40</p></div>
+										<div class="col-4"><p><b><i>Night Garden</i></b><br />Acrylic, 10" x 10"<br />$40 SOLD</p></div>
 
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/a22.jpeg" alt="Strength | Acrylic, 11&quot x 10&quot (2 piece) | $70 SOLD" /></span></div>
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/a2.jpg" alt="Flowing Waters | Acrylic, 20&quot x 10&quot (3 piece) | $100 SOLD" /></span></div>
