--- a/gallery.html
+++ b/gallery.html
@@ -114,9 +114,9 @@
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n22.jpeg" alt="Prairie Field | Acrylic, 10&quot  x 20&quot | $30 SOLD" /></span></div>
-										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n32.JPG" alt="Summer Sky | Acrylic, 10&quot x 20&quot | $40" /></span></div>
+										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n32.JPG" alt="Summer Sky | Acrylic, 10&quot x 20&quot | $40 SOLD /></span></div>
 										<div class="col-5"><p><b><i>Prairie Field</i></b><br />Acrylic, 10" x 20"<br />$30 SOLD</p></div>
-										<div class="col-5"><p><b><i>Summer Sky</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
+										<div class="col-5"><p><b><i>Summer Sky</i></b><br />Acrylic, 10" x 20"<br />$40 SOLD</p></div>
 
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n10.JPG" alt="Spot of Light | Acrylic, 20&quot x 20&quot | $70" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n20.jpeg" alt="Field of Poppies | Acrylic, 12&quot x 12&quot | $45 SOLD" /></span></div>
