--- a/gallery.html
+++ b/gallery.html
@@ -168,11 +168,11 @@
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n1.jpg" alt="Sleepy Town | Acrylic, 10' x 20' | $40 SOLD" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n2.jpg" alt="Blustery Day | Acrylic, 22&quot x 12&quot | $120 SOLD" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n3.jpg" alt="Spring has Sprung | Acrylic and Ink, 10&quot x 20&quot | $40 SOLD" /></span></div>
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n6.jpg" alt="White Blossoms | Acrylic, 10&quot x 20&quot | $40" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n6.jpg" alt="White Blossoms | Acrylic, 10&quot x 20&quot | $40 SOLD" /></span></div>
 										<div class="col-3"><p><b><i>Sleepy Town</i></b><br />Acrylic, 10' x 20'<br />$40 SOLD</p></div>
 										<div class="col-3"><p><b><i>Blustery Day</i></b><br />Acrylic, 22" x 12"<br />$120 SOLD</p></div>
 										<div class="col-3"><p><b><i>Spring has Sprung</i></b><br />Acrylic and Ink, 10" x 20"<br />$40 SOLD</p></div>
-										<div class="col-3"><p><b><i>White Blossoms</i></b><br />Acrylic, 10" x 20"<br />$50</p></div>
+										<div class="col-3"><p><b><i>White Blossoms</i></b><br />Acrylic, 10" x 20"<br />$50 SOLD</p></div>
 										
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n11.jpeg" alt="Contrast | Acrylic, 18&quot x 24&quot | $70" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n30.JPG" alt="Open Sky | Acrylic, 10&quot x 20&quot | $40 SOLD" /></span></div>
