--- a/gallery.html
+++ b/gallery.html
@@ -135,11 +135,11 @@
 										<div class="col-3"><p><b><i>Blossoms</i></b><br />Acrylic, 10" x 20"<br />$40</p></div>
 										
 										
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n9.JPG" alt="Designer Trees | Acrylic Layers, 19.5&quot x 19.5&quot | $80" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n9.JPG" alt="Designer Trees | Acrylic Layers, 19.5&quot x 19.5&quot | $80 SOLD" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n13.jpeg" alt="Texture | Acrylic, 8&quot x 10&quot | $45" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n33.jpg" alt="Prairie Sky | Acrylic, 31.5&quot x 24&quot | $140 SOLD" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n21.jpeg" alt="Land and Water | Acrylic Layers, 20&quot x 20&quot | $70 SOLD" /></span></div>
-										<div class="col-3"><p><b><i>Designer Trees</i></b><br />Acrylic Layers, 19.5" x 19.5"<br />$80</p></div>
+										<div class="col-3"><p><b><i>Designer Trees</i></b><br />Acrylic Layers, 19.5" x 19.5"<br />$80 SOLD</p></div>
 										<div class="col-3"><p><b><i>Texture</i></b><br />Acrylic, 8" x 10"<br />$45</p></div>
 										<div class="col-3"><p><b><i>Prairie Sky</i></b><br />Acrylic, 31.5" x 24"<br />$140 SOLD</p></div>
 										<div class="col-3"><p><b><i>Land and Water</i></b><br />Acrylic Layers, 20" x 20"<br />$70 SOLD</p></div>
