--- a/gallery.html
+++ b/gallery.html
@@ -118,10 +118,10 @@
 										<div class="col-5"><p><b><i>Prairie Field</i></b><br />Acrylic, 10" x 20"<br />$30 SOLD</p></div>
 										<div class="col-5"><p><b><i>Summer Sky</i></b><br />Acrylic, 10" x 20"<br />$40 SOLD</p></div>
 
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n10.JPG" alt="Spot of Light | Acrylic, 20&quot x 20&quot | $70" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n10.JPG" alt="Spot of Light | Acrylic, 20&quot x 20&quot | $70 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n20.jpeg" alt="Field of Poppies | Acrylic, 12&quot x 12&quot | $45 SOLD" /></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n19.JPG" alt="The Other Side | Acrylic, 12&quot x 12&quot | $40" /></span></div>
-										<div class="col-4"><p><b><i>Spot of Light</i></b><br />Acrylic, 20" x 20"<br />$70</p></div>
+										<div class="col-4"><p><b><i>Spot of Light</i></b><br />Acrylic, 20" x 20"<br />$70SOLD</p></div>
 										<div class="col-4"><p><b><i>Field of Poppies</i></b><br />Acrylic, 12" x 12"<br />$45 SOLD</p></div>
 										<div class="col-4"><p><b><i>The Other Side</i></b><br />Acrylic, 12" x 12"<br />$40</p></div>
 
