--- a/gallery.html
+++ b/gallery.html
@@ -56,10 +56,10 @@
 												<img class="modal-content" id="img01">
 												<div id="caption"></div>
 											</div></span></div>
-										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a9.jpeg" alt="Happy | Acrylic, 8&quot x 10&quot | $20"/></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a9.jpeg" alt="Happy | Acrylic, 8&quot x 10&quot | $20 SOLD"/></span></div>
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a14.JPG" alt="Opposites | Acrylic, 8&quot x 10&quot | $20"/></span></div>
 										<div class="col-4"><p><b><i>Kaleidoscope</i></b><br />Acrylic, 8' x 10'<br />$20</p></div>
-										<div class="col-4"><p><b><i>Happy</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
+										<div class="col-4"><p><b><i>Happy</i></b><br />Acrylic, 8" x 10"<br />$20 SOLD</p></div>
 										<div class="col-4"><p><b><i>Opposites</i></b><br />Acrylic, 8" x 10"<br />$20</p></div>
 
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/a12.JPG" alt="Beyond | Acrylic, 8&quot x 10&quot (2 piece)| $40 SOLD"/></span></div>
@@ -75,11 +75,11 @@
 										<div class="col-4"><p><b><i>Still Light</i></b><br />Acrylic, 20" x 20"<br />$60</p></div>
 
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/a19.jpg" alt="Vivid | Alcohol Inks, 30&quot x 24&quot | $90"/></span></div>
-										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/a20.jpg" alt="Deep Waters | Alcohol Inks, 12&quot x 22&quot | $50"/></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/a20.jpg" alt="Deep Waters | Alcohol Inks, 12&quot x 22&quot | $50 SOLD"/></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/a11.JPG" alt="Ocean Life | Acrylic, 20&quot x 10&quot | $40" /></span></div>
 										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/a4.jpg" alt="Exuberant | Acrylic and Resin, 9.5&quot x 8&quot | $30 SOLD" /></span></div>
 										<div class="col-3"><p><b><i>Vivid</i></b><br />Alcohol Inks, 30" x 24"<br />$90</p></div>
-										<div class="col-3"><p><b><i>Deep Waters</i></b><br />Alcohol Inks, 12" x 22"<br />$50</p></div>
+										<div class="col-3"><p><b><i>Deep Waters</i></b><br />Alcohol Inks, 12" x 22"<br />$50 SOLD</p></div>
 										<div class="col-3"><p><b><i>Ocean Life</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
 										<div class="col-3"><p><b><i>Exuberant</i></b><br />Acrylic and Resin, 9.5" x 8"<br />$30 SOLD</p></div>
 
