--- a/gallery.html
+++ b/gallery.html
@@ -50,6 +50,13 @@
 								<h2><a id="abstract collection">Abstract Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a24.JPEG" alt="Sea Life - New | Acrylic, 24&quot x 32&quot | $140" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a25.JPEG" alt="Shadows - New | Acrylic, 12&quot x 12&quot | $40" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a23.JPEG" alt="Morning Dew - New | Acrylic, 12&quot x 24&quot | $90" /></span></div>
+										<div class="col-4"><p><b><i>Sea Life - New</i></b><br />Acrylic, 24" x 32"<br />$140</p></div>
+										<div class="col-4"><p><b><i>Shadows - New</i></b><br />Acrylic, 12" x 12"<br />$40</p></div>
+										<div class="col-4"><p><b><i>Morning Dew - New</i></b><br />Acrylic, 12" x 24"<br />$90</p></div>
+
 										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/a7.jpeg" alt="Kaleidoscope | Acrylic, 8' x 10' | $20"/>
 											<div id="myModal" class="modal">
 												<span class="close">&times;</span>
@@ -113,6 +120,29 @@
 								<h2><a id="nature collection">Nature Collection</a></h2>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n45.JPEG" alt="Dappled Light - New | Acrylic, 12&quot x 16&quot | $70" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n47.JPG" alt="Getaway - New | Acrylic, 24&quot x 18&quot | $140" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n48.JPEG" alt="Grassy Spot - New | Acrylic, 18&quot x 24&quot | $80" /></span></div>
+										<div class="col-4"><p><b><i>Dappled Light - New</i></b><br />Acrylic, 12" x 16"<br />$70</p></div>
+										<div class="col-4"><p><b><i>Getaway - New</i></b><br />Acrylic, 24" x 18"<br />$140</p></div>
+										<div class="col-4"><p><b><i>Grassy Spot - New</i></b><br />Acrylic, 18" x 24"<br />$80</p></div>
+
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n40.JPEG" alt="Summer Is Here - New | Acrylic, 20&quot x 10&quot | $50" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n43.JPEG" alt="Hope - New | Acrylic, 12&quot x 36&quot | $120" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n44.JPEG" alt="Vibrant Nature - New | Acrylic, 12&quot x 36&quot | $140" /></span></div>
+										<div class="col-3"><span class="image fit"><img class= "myImages" id="myImg" src="images/n41.JPEG" alt="Vivid Colours - New | Acrylic, 24&quot x 18&quot | $110" /></span></div>
+										<div class="col-3"><p><b><i>Summer Is Here - New</i></b><br />Acrylic, 20" x 10"<br />$50</p></div>
+										<div class="col-3"><p><b><i>Hope - New</i></b><br />Acrylic, 12" x 36"<br />$120</p></div>
+										<div class="col-3"><p><b><i>Vibrant Nature - New</i></b><br />Acrylic, 12" x 36"<br />$140</p></div>
+										<div class="col-3"><p><b><i>Vivid Colours - New</i></b><br />Acrylic, 24" x 18"<br />$110</p></div>
+
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n49.jpeg" alt="Windy Day - New | Acrylic, 20&quot x 10&quot | $40" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n42.JPEG" alt="Jump In - New | Acrylic, 24&quot x 3.5&quot | $110" /></span></div>
+										<div class="col-4"><span class="image fit"><img class= "myImages" id="myImg" src="images/n46.JPG" alt="Pear - New | Acrylic, 20&quot x 20&quot | $80" /></span></div>
+										<div class="col-4"><p><b><i>Windy Day - New</i></b><br />Acrylic, 20" x 10"<br />$40</p></div>
+										<div class="col-4"><p><b><i>Jump In - New</i></b><br />Acrylic, 24" x 3.5"<br />$110</p></div>
+										<div class="col-4"><p><b><i>Pear - New</i></b><br />Acrylic, 20" x 20"<br />$80</p></div>
+
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n22.jpeg" alt="Prairie Field | Acrylic, 10&quot  x 20&quot | $30 SOLD" /></span></div>
 										<div class="col-5"><span class="image fit"><img class= "myImages" id="myImg" src="images/n32.JPG" alt="Summer Sky | Acrylic, 10&quot x 20&quot | $40 SOLD" /></span></div>
 										<div class="col-5"><p><b><i>Prairie Field</i></b><br />Acrylic, 10" x 20"<br />$30 SOLD</p></div>
